--- a/sample-webapp/package.json
+++ b/sample-webapp/package.json
@@ -13,16 +13,19 @@
   "license": "MIT",
   "dependencies": {
     "@hapi/iron": "6.0.0",
+    "boom": "7.3.0",
     "connect-ensure-login": "0.1.1",
     "cookie-parser": "1.4.4",
     "dotenv": "8.2.0",
     "ejs": "~2.5.7",
     "express": "4.17.1",
     "express-session": "1.17.0",
+    "jwt-decode": "2.2.0",
     "morgan": "1.9.1",
     "passport": "0.4.0",
     "passport-auth0": "1.3.0",
-    "passport-custom": "1.1.0"
+    "passport-custom": "1.1.0",
+    "request-promise": "4.2.5"
   },
   "devDependencies": {}
 }
